(chore):Cors enable for interaction

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,4 +10,8 @@
     "[jsonc]": {
         "editor.defaultFormatter": "vscode.json-language-features"
     },
+    "[python]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "charliermarsh.ruff"
+    },
 }
